@@ -13,6 +13,7 @@ m4_ifdef([AS_HELP_STRING], [], [AC_DEFUN([AS_HELP_STRING], [AC_HELP_STRING($][@)
 # Checks for programs.
 AC_PROG_CC
 AC_C_CONST
+ALUT_C__ATTRIBUTE__
 AC_EXEEXT
 AC_LIBTOOL_WIN32_DLL
 AC_PROG_LIBTOOL
@@ -20,29 +21,33 @@ AC_SUBST([LIBTOOL_DEPS])
 
 AC_DEFINE([_ALUTLIB], [1], [Define to 1 if you want to build the ALUT DLL.])
 
-# We could separate this into a macro...
-AC_CACHE_CHECK([whether the C compiler supports __attribute__],
-  [alut_cv___attribute__],
-  [AC_COMPILE_IFELSE([AC_LANG_SOURCE([[
-    void  foo (int bar __attribute__((unused)) ) { }
-    static void baz (void) __attribute__((unused));
-    static void baz (void) { }]])],
-    [alut_cv___attribute__=yes],
-    [alut_cv___attribute__=no])])
-if test "$alut_cv___attribute__" = yes; then
-  AC_DEFINE([HAVE___ATTRIBUTE__], [1], [Define to 1 if your C compiler supports __attribute__])
-fi
-
 # Checks for libraries. (not perfect yet)
 AC_SEARCH_LIBS([pthread_self], [pthread])
 AC_SEARCH_LIBS([alGetError], [openal32 openal])
 
 # Checks for header files.
 AC_HEADER_STDC
-AC_CHECK_HEADERS([AL/alc.h AL/al.h math.h stdio.h time.h windows.h])
+AC_CHECK_HEADERS([AL/alc.h AL/al.h ctype.h math.h stdio.h time.h windows.h])
 
 # Checks for library functions.
-AC_CHECK_FUNCS([nanosleep usleep Sleep])
+ALUT_CHECK_FUNC([[@%:@include <time.h>]],
+                [nanosleep], [[((struct timespec*)0, (struct timespec*)0)]])
+
+ALUT_CHECK_FUNC([[@%:@include <unistd.h>]],
+                [usleep], [[(0)]])
+
+ALUT_CHECK_FUNC([[@%:@include <windows.h>]],
+                [Sleep], [[(0)]])
+
+ALUT_CHECK_FUNC([[@%:@include <sys/types.h>
+                  @%:@include <sys/stat.h>
+                  @%:@include <unistd.h>]],
+                [stat], [[("", (struct stat*)0)]])
+
+ALUT_CHECK_FUNC([[@%:@include <sys/types.h>
+                  @%:@include <sys/stat.h>]],
+                [_stat], [[("", (struct _stat*)0)]])
+
 AC_CHECK_LIBM
 AC_SUBST([LIBM])
 
